--- a/basic-resume/index.html
+++ b/basic-resume/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<title>Dylan Josephson Resume</title>
-
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -12,12 +12,12 @@
 	<h1>Dylan Josephson</h1>
 	<b>Journalism Student</b>
 	<br>
-	<img src="resumephoto.jpg" width="300" alt="Profile picture of Dylan Josephson">
+	<!--<img src="resumephoto.jpg" width="300" alt="Profile picture of Dylan Josephson">!-->
 	<p>A highly motivated graduating senior with demonstrated writing, filming, editing, design, and communication skills, as well as abilities proven in varying work environments, an education from a reputable institution, and ambitions of working in media</p>
 	
 	<ul>
 		<li><a href="mailto:dylanjosephson9@gmail.com" target="_blank">Email</a></li>
-		<li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li>
+		<li><a href="https://www.linkedin.com/in/dylan-josephson-24ba04230/" target="_blank">LinkedIn</a></li>
 		<li><a href="https://twitter.com/dylan_josephson" target="_blank">Twitter</a></li>
 		<li><a href="https://github.com/dylanjosephson9" target="_blank">GitHub</a></li>
 	</ul>
