--- a/bootstrap-template/index.html
+++ b/bootstrap-template/index.html
@@ -17,9 +17,117 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
+
+<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
+<!--Navbar Code-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Dylan Josephson</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link" href="#education">Education</a>
+        <a class="nav-link" href="#experience">Experience</a>
+        <a class="nav-link" href="#skills">Skills</a>
+        <a class="nav-link" href="#clips">Clips</a>
+      </div>
+    </div>
+  </div>
+</nav>
+
+<div class="bg-dark text-secondary px-4 py-5 text-center">
+    <div class="py-5">
+      <h1 class="display-5 fw-bold text-white">Dylan Josephson</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="fs-5 mb-4">A highly motivated graduating senior with demonstrated writing, filming, editing, design, and communication skills, as well as abilities proven in varying work environments, an education from a reputable institution, and ambitions of working in media</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Email</button>
+          <button type="button" class="btn btn-outline-light btn-lg px-4">Twitter</button>
+          <button type="button" class="btn btn-outline-light btn-lg px-4">LinkedIn</button>
+           <button type="button" class="btn btn-outline-light btn-lg px-4">GitHub</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-4">
+		<div class="sectionheader">
+		Education:
+	</div>
+	<ul id="degrees">
+		<li>Bachelor of Arts, Journalism, University of Maryland College Park, 2022</li>
+	</ul>
+	</div>
+
+
+	<div class="col-md-8">
+		
+		<div class="sectionheader"><a name=
+		"experience">Experience:</a>
+	</div>
+
+		<div class="jobtitle">
+			Reporter, Data & Graphics Bureau
+		</div>
+		<div class="organization">
+			Capital News Service
+		</div>
+		<div class="date">
+			January 2022 - Present
+		</div>
+		<ul>
+			<li>A student-powered news organization with bureaus in College Park, Annapolis, and Washington D.C.</li>
+			<li>Team member of the Data & Graphics Bureau, which focuses on data, design, graphics and computational journalism</li>
+			<li>Collaborate with peers and professors in analyzing data,  reporting, building data visualizations and other graphics, designing and coding websites, and building automated storytelling tools</li>
+		</ul>
+
+		<div class="jobtitle">
+			Student Board Member
+		</div>
+		<div class="organization">
+			Maryland Media Inc.
+		</div>
+		<div class="date">
+			May 2021 - Present
+		</div>
+		<ul>
+			<li>Parent company to three UMD on-campus publications: The Diamondback, The Mitzpeh, and the Terrapin yearbook</li>
+			<li>Head of the audience committee, which entails leading team in designing and distributing an audience survey questionnaire and analyzing results, with the goal of expansion</li>
+			<li>Member of the finance committee, which aims to efficiently use funds for each publication, as well as extend student scholarships</li>
+		</ul>
+
+	</div>
+
+	<div class="row">
+	<div class="col-md-4">
+		<div class="sectionheader"><a name="skills">Skills:</a>
+		</div>
+	<ul id="do">
+		<li>Strong communicator and exceptional writer</li>
+		<li>Collaborative, supportive, and encouraging team member</li>
+		<li>Advanced knowledge of Adobe Creative Cloud programs  (Photoshop, Illustrator, InDesign, Premiere Pro, After Effects, Audition)</li>
+		<li>Proficient in Microsoft Office, Google Drive, Wordpress</li>
+		<li>Skilled social media user (Instagram, Twitter, Snapchat, Facebook)</li>
+	</ul>
+		</div>
+
+
+
+
+	
+	</div>
+</div>
 
 	</body>
 
