--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -136,7 +136,37 @@
 
 				<figure>
 					<img src="images/avengers.jpg">
-					<figcaption><small>Marvel's The Avenger's (2012) was the first of four installments in the Avengers series (as of now).</small></figcaption>
+					<figcaption><small>Marvel's The Avenger's (2012) was the first of four installments in the Avengers series (as of now). In the film, the original six Avengers were:</small></figcaption>
+				</figure>
+
+				<figure>
+					<img src="images/ironman.jpg">
+					<figcaption><small>Ironman, played by Robert Downey Jr.</small></figcaption>
+				</figure>
+
+				<figure>
+					<img src="images/captain.jpg">
+					<figcaption><small>Captain America, played by Chris Evans</small></figcaption>
+				</figure>
+
+				<figure>
+					<img src="images/hulk.jpg">
+					<figcaption><small>The Hulk, played by Mark Ruffalo</small></figcaption>
+				</figure>
+
+				<figure>
+					<img src="images/thor.jpg">
+					<figcaption><small>Thor, played by Chris Hemsworth</small></figcaption>
+				</figure>
+
+				<figure>
+					<img src='images/widow.jpg'>
+					<figcaption><small>Black Widow, played by Scarlett Johansson</small></figcaption>
+				</figure>
+
+				<figure>
+					<img src="images/hawkeye.jpg">
+					<figcaption><small>Hawkeye, played by Jeremy Renner</small></figcaption>
 				</figure>
 
 					<br>
